// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendHeaderEvent sends a basic analytics event 1`] = `
Object {
  "category": "consistent header",
  "event_extension": "Design system integration",
  "event_name": "header_click",
  "text": "Click here!",
}
`;

exports[`sendHeaderEvent sends an analytics event with a url 1`] = `
Object {
  "category": "consistent header",
  "event_extension": "Design system integration",
  "event_name": "header_click",
  "link_url": "https://somewhere",
  "text": "Link to somewhere",
}
`;
